--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,5 @@
 host=192.168.100.2:8111
-superUserToken=6219131237291996269
+superUserToken=4459997624202293631
+browser=chrome
+remote=http://localhost:4444/wd/hub
+browserSize=1920x1080
