--- a/.github/workflows/frontend-stage.yml
+++ b/.github/workflows/frontend-stage.yml
@@ -7,6 +7,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Make mvnw and all scripts executable
+        run: chmod -R +x ./
+
       - name: Build frontend
         run: echo Собирается билд фронтенда \(прогоняются юнит тесты при сборке, запускаются линтеры\), формируется и публикуется Docker образ
 
