--- a/.github/actions/teamcity-setup/action.yml
+++ b/.github/actions/teamcity-setup/action.yml
@@ -9,7 +9,7 @@ runs:
         java-version: '17'
         distribution: 'zulu'
 
-    # По умолчанию в ubuntu отсуствуе команда ifconfig
+    # По умолчанию в ubuntu отсутствует команда ifconfig
     - name: Install ifconfig
       shell: bash
       run: sudo apt-get update && sudo apt-get install -y net-tools
